Fixed bug #68638 (pg_update() fails to store infinite values)